cambiando los links de las imagenes

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@
       <!-- Slide 1 -->
       <div class="slide min-w-full relative object-cover">
         <img 
-          src="/src/img/img1.jpg" 
+          src="/img/img1.jpg" 
           alt="Autobús moderno" 
           class="w-full h-full object-cover"
         />
@@ -25,7 +25,7 @@
       <!-- Slide 2 -->
       <div class="slide min-w-full relative">
         <img 
-          src="/src/img/img2.jpg" 
+          src="/img/img2.jpg" 
           alt="Interior de autobús" 
           class="w-full h-full object-cover"
         />
@@ -43,7 +43,7 @@
       <!-- Slide 3 -->
       <div class="slide min-w-full relative">
         <img 
-          src="/src/img/img4.jpg" 
+          src="/img/img4.jpg" 
           alt="Flota de autobuses" 
           class="w-full h-full object-cover"
         />
