--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -68,7 +68,7 @@
       <div class="mt-12 lg:mt-0">
         <div class="relative">
           <img 
-            src="/src/img/about.jpg" 
+            src="/img/about2.png" 
             alt="Equipo Autobuses del Evora" 
             class="rounded-2xl shadow-2xl"
           />
