--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@
     <div class="flex justify-between items-center h-16">
       <!-- Logo -->
       <div class="flex-shrink-0 flex items-center">
-        <img src="/public/img/logo.png" class="w-20 h-20" alt="Logo de la empresa">
+        <img src="/img/logo.png" class="w-20 h-20" alt="Logo de la empresa">
       </div>
       
       <!-- Desktop Navigation -->
