--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -24,7 +24,7 @@
           </div>
           
           <div class="text-center">
-            <div class="text-3xl font-bold text-primary-600 mb-2">100M+</div>
+            <div class="text-3xl font-bold text-primary-600 mb-2">100K+</div>
             <div class="text-gray-600">Pasajeros anuales</div>
           </div>
         </div>
