--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@
       <!-- Slide 1 -->
       <div class="slide min-w-full relative object-cover">
         <img 
-          src="/img/img1.jpg" 
+          src="/img/pituchi2.jpeg" 
           alt="Autobús moderno" 
           class="w-full h-full object-cover"
         />
@@ -25,7 +25,7 @@
       <!-- Slide 2 -->
       <div class="slide min-w-full relative">
         <img 
-          src="/img/img2.jpg" 
+          src="/img/diamante2.jpeg" 
           alt="Interior de autobús" 
           class="w-full h-full object-cover"
         />
@@ -43,7 +43,7 @@
       <!-- Slide 3 -->
       <div class="slide min-w-full relative">
         <img 
-          src="/img/img4.jpg" 
+          src="/img/pituchi.jpeg" 
           alt="Flota de autobuses" 
           class="w-full h-full object-cover"
         />
@@ -60,12 +60,12 @@
     </div>
 
     <!-- Navigation arrows -->
-    <button class="slider-prev absolute left-4 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-20 text-white p-3 rounded-full hover:bg-opacity-30 transition-all z-10">
+   <button class="slider-prev absolute left-4 top-1/2 transform -translate-y-1/2  bg-opacity-20 text-white p-3 rounded-full hover:bg-opacity-30 transition-all z-10">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
       </svg>
     </button>
-    <button class="slider-next absolute right-4 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-20 text-white p-3 rounded-full hover:bg-opacity-30 transition-all z-10">
+    <button class="slider-next absolute right-4 top-1/2 transform -translate-y-1/2  bg-opacity-20 text-white p-3 rounded-full hover:bg-opacity-30 transition-all z-10">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
       </svg>
