--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -48,6 +48,7 @@ let showModal = false;
           >
             ×
           </button>
+          <h1 class="text-2xl font-semibold text-gray-900 mb-4 text-center">Descubre Nuestro Servicio Plus</h1>
 
           <!-- Contenedor de imágenes responsivo -->
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
@@ -98,7 +99,7 @@ let showModal = false;
           >
             ×
           </button>
-
+          <h1 class="text-2xl font-semibold text-gray-900 mb-4 text-center">Descubre Nuestro Servicio Star</h1>
           <!-- Contenedor de imágenes responsivo -->
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
             <img src="/img/star.jpg" alt="Servicio Star 1" class="w-full h-48 object-cover rounded-lg shadow-md" />
@@ -147,7 +148,7 @@ let showModal = false;
           >
             ×
           </button>
-
+          <h1 class="text-2xl font-semibold text-gray-900 mb-4 text-center">Descubre Nuestro Servicio Diamante</h1>
           <!-- Contenedor de imágenes responsivo -->
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
             <img src="/img/diamante2.jpeg" alt="Servicio Diamante 1" class="w-full h-48 object-cover rounded-lg shadow-md" />
@@ -195,12 +196,12 @@ let showModal = false;
           >
             ×
           </button>
-
+          <h1 class="text-2xl font-semibold text-gray-900 mb-4 text-center">Descubre los mejores destinos con nosotros</h1>
           <!-- Contenedor de imágenes responsivo -->
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
             <img src="/img/turi.jpeg" alt="Servicio Turismo 1" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/turi2.jpeg" alt="Servicio Turismo 2" class="w-full h-48 object-cover rounded-lg shadow-md" />
-           <img src="/img/turi3.jpg" alt="Servicio Turismo 3" class="w-full h-48 object-cover rounded-lg shadow-md" />
+            <img src="/img/turi3.jpg" alt="Servicio Turismo 3" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/turi4.jpeg" alt="Servicio Turismo 4" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/turi5.jpeg" alt="Servicio Turismo 5" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/turi6.jpeg" alt="Servicio Turismo 6" class="w-full h-48 object-cover rounded-lg shadow-md" />
@@ -243,7 +244,7 @@ let showModal = false;
           >
             ×
           </button>
-
+          <h1 class="text-2xl font-semibold text-gray-900 mb-4 text-center">Descubre Nuestro Servicio Duo</h1>
           <!-- Contenedor de imágenes responsivo -->
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
             <img src="/img/duo.jpg" alt="Servicio Duo 1" class="w-full h-48 object-cover rounded-lg shadow-md" />
