--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,13 @@ import Services from '../components/Services.astro';
 import About from '../components/About.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
+import Horarios from '../components/Horarios.astro';
 ---
 
 <Layout>
   <Header />
   <Hero />
+  <Horarios />
   <Services />
   <About />
   <Contact />
