--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -43,7 +43,7 @@
       <!-- Slide 3 -->
       <div class="slide min-w-full relative">
         <img 
-          src="/img/pituchi.jpeg" 
+          src="/img/pituchi4.jpeg" 
           alt="Flota de autobuses" 
           class="w-full h-full object-cover"
         />
