--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -152,7 +152,7 @@ let showModal = false;
           <!-- Contenedor de imágenes responsivo -->
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
             <img src="/img/diamante2.jpeg" alt="Servicio Diamante 1" class="w-full h-48 object-cover rounded-lg shadow-md" />
-            <img src="/img/diamante2.jpeg" alt="Servicio Diamante 2" class="w-full h-48 object-cover rounded-lg shadow-md" />
+            <img src="/img/diamante-int.jpeg" alt="Servicio Diamante 2" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/diamante3.jpeg" alt="Servicio Diamante 3" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/diamante4.jpeg" alt="Servicio Diamante 4" class="w-full h-48 object-cover rounded-lg shadow-md" />
             <img src="/img/diamante5.jpeg" alt="Servicio Diamante 5" class="w-full h-48 object-cover rounded-lg shadow-md" />
