--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,16 @@ import About from '../components/About.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 import Horarios from '../components/Horarios.astro';
+import Conect from '../components/Conect.astro';
 ---
 
 <Layout>
   <Header />
   <Hero />
-  <Horarios />
   <Services />
+  <Horarios />
   <About />
+  <Conect />
   <Contact />
   <Footer />
 </Layout>
