--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 import Horarios from '../components/Horarios.astro';
 import Conect from '../components/Conect.astro';
+import Hero2 from '../components/Hero2.astro';
 ---
 
 <Layout>
@@ -15,6 +16,7 @@ import Conect from '../components/Conect.astro';
   <Hero />
   <Services />
   <Horarios />
+
   <About />
   <Conect />
   <Contact />
