--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,9 @@ import Services from '../components/Services.astro';
 import About from '../components/About.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
-import Horarios from '../components/Horarios.astro';
 import Conect from '../components/Conect.astro';
-import Hero2 from '../components/Hero2.astro';
 import Rutas from '../components/Rutas.jsx';
+import Promos from '../components/Promos.jsx';
 ---
 
 <Layout>
@@ -17,9 +16,9 @@ import Rutas from '../components/Rutas.jsx';
   <Hero />
   <Services />
   <Rutas client:load/>
-
   <About />
   <Conect />
+  <Promos client:idle/>
   <Contact />
   <Footer />
 </Layout>
